--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,7 @@ dependencies {
     implementation 'io.springfox:springfox-swagger2:2.7.0'
     implementation 'io.springfox:springfox-swagger-ui:2.7.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('junit:junit:4.13')
 }
 
