--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.3.9.RELEASE'
+    id 'org.springframework.boot' version '2.4.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -18,7 +18,9 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:2.7.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation('junit:junit:4.13')
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
+    testImplementation 'org.mockito:mockito-inline:2.28.2'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.7.7'
 }
 
 test {
